src/objects/Request_FieldId_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store some field ids which are used in javascript codes in a custom button &apos;create secondary request&apos;.</description>
    <fields>
        <fullName>Business_Unit_Primary__c</fullName>
        <label>Business Unit Primary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Therapeutic_Area__c</fullName>
        <label>Primary Therapeutic Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <label>Related Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Molecule__c</fullName>
        <label>Request (Request Molecule)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Stage__c</fullName>
        <description>Autopopulates Request Tracking&apos;s Request Stage</description>
        <label>Request Stage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>for autopopulating Request Tracking</description>
        <label>Request Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Functional_Area__c</fullName>
        <label>Requestor Functional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Molecule__c</fullName>
        <label>Study (Study Molecule)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Request FieldId Settings</label>
</CustomObject>